# text-book-hackathon

./: README.md
.specify/memory/: constitution.md
backend/: Dockerfile  Procfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
history/adr/: 001-docusaurus-chatbot-integration-approach.md  001-docusaurus-glass-morphism-ui-enhancement.adr.md  003-frontend-architecture-decision.adr.md  004-styling-approach-for-glassmorphism-features.adr.md  005-data-structure-for-features-content.adr.md
physical-ai-robotics-docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
physical-ai-robotics-docs/docs/: intro.md
specs/001-fix-chatbot-panel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-url-ingestion-vector-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-chatbot-integration/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-homepage-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rag-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-frontend-backend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-docusaurus-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-edu-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-gemini-rag-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+75 files in other folders)
